Allow deleting device
- Add Tests
- Add delete device REST method
- Add service method
- Add Dockerfile
- Add @Version to device to solve racing issue with partial / fully update when device in-use
